add more link text

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <title>Run Buddy</title>
     <body>
         <h1>RUN BUDDY</h1>
-        What we do
+        What we do What You Do Your Trainers Reach Out
     </body>
     </head>
 </html>
