style what we do section

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
   </section>
 
   <!-- "what we do" section -->
-  <section id="what-we-do">
+  <section id="what-we-do" class="intro">
     <h2>What We Do</h2>
     <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem eos temporibus, similique ullam ex amet consectetur libero cum possimus sapiente suscipit impedit aliquid porro non. Facilis tempore sit nam eos!
