--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Run Buddy</title>
-  <link rel="stylesheet" href="./assets/style.css" />
+  <link rel="stylesheet" href="./assets/css/style.css" />
 </head>
 
 <body>
@@ -110,44 +110,77 @@
 
   <!-- "meet the trainers" section -->
   <section id="your-trainers" class="trainers">
-    <h2 class="section-title primary-border">
-        Meet The Trainers
-    </h2>
+    <h2 class="section-title primary-border">Meet The Trainers</h2>
     <article class="trainer">
-        <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
-        <div class="trainer-bio text-left">
-            <h3>Arron Stephens</h3>
-            <h4>Speed / Strength</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestias aut cupiditate similique debitis aliquid adipisci consequatur quas quidem quam quis ea, reprehenderit totam corporis error maiores vitae, esse minima voluptatibus.
-            </p>
-        </div>
+      <img src="./assets/images/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron" />
+      <div class="trainer-bio text-left">
+        <h3>Arron Stephens</h3>
+        <h4>Speed / Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
     </article>
+
+    <!-- second trainer bio -->
     <article class="trainer">
-        <div class="trainer-bio text-right">
-            <h3>Joanna Gill</h3>
-            <h4>Endurance</h4>
-            <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum ut alias, officiis earum quas error reprehenderit laborum amet, dicta neque dignissimos unde sapiente odit dolorem voluptatibus animi a ducimus maiores.
-            </p>
-        </div>
-        <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
+      <div class="trainer-bio text-right">
+        <h3>Joanna Gill</h3>
+        <h4>Endurance</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
+      <img src="./assets/images/trainer-2.jpg" alt="Joanna Gill cooling off after a workout" />
     </article>
+
+    <!-- third trainer bio -->
     <article class="trainer">
-        <img src="./assets/images/trainer-3.jpg" alt="Harry Smith wearing a headband and lifting comically small pink weights" />
-        <div class="trainer-bio text-left">
-            <h3>Harry "the Headband" Smith</h3>
-            <h4>Strength</h4>
-            <p>
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Recusandae blanditiis nulla ipsa iure? Quaerat debitis blanditiis dolores autem recusandae non, voluptates nemo necessitatibus dignissimos, vero, eaque voluptatum laborum expedita unde.
-            </p>
-        </div>
+      <img src="./assets/images/trainer-3.jpg"
+        alt="Harry Smith wearing a headband and lifting comically small pink weights" />
+      <div class="trainer-bio text-left">
+        <h3>Harry "the Headband" Smith</h3>
+        <h4>Strength</h4>
+        <p>
+          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sequi neque animi quo cupiditate commodi saepe culpa
+          sed
+          itaque velit maiores optio dolorem excepturi aperiam dolores, voluptatibus suscipit amet quis repellat!
+        </p>
+      </div>
     </article>
   </section>
 
   <!-- "reach out" section -->
   <section>
     <h2>Reach Out</h2>
+    <div class="contact-info">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.0191858931366!2d-121.7744965488883!3d37.64875297968338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fdd715d6222a7%3A0x655d6ab988093df9!2s3001%20Picholine%20Dr%2C%20Livermore%2C%20CA%2094550!5e0!3m2!1sen!2sus!4v1624056762933!5m2!1sen!2sus"
+        width="400"
+        height="400"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy">
+        </iframe>
+    </div>
+    <div>
+        <h3>Run Buddy</h3>
+        <p>
+            Any questions or concerns before signing up?
+            <br />
+            Let us know and we'll be happy to talk to you!
+        </p>
+        <address>
+            55 Main Street <br />
+            Some Town, Ca <br />
+            12345<br />
+            P: 555.RUN.BUDZ (555.786.2839)<br />
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+        </address>
+    </div>
   </section>
 
   <!-- footer -->
