--- a/index.html
+++ b/index.html
@@ -155,31 +155,30 @@
   </section>
 
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="reach-out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
     <div class="contact-info">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3159.0191858931366!2d-121.7744965488883!3d37.64875297968338!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x808fdd715d6222a7%3A0x655d6ab988093df9!2s3001%20Picholine%20Dr%2C%20Livermore%2C%20CA%2094550!5e0!3m2!1sen!2sus!4v1624056762933!5m2!1sen!2sus"
-        width="400"
-        height="400"
-        style="border:0;"
+      <iframe 
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
+        style="border:0;" 
         allowfullscreen=""
         loading="lazy">
-        </iframe>
-    </div>
-    <div>
+      </iframe>
+      <div>
         <h3>Run Buddy</h3>
         <p>
-            Any questions or concerns before signing up?
-            <br />
-            Let us know and we'll be happy to talk to you!
+          Any questions or concerns before signing up?
+          <br />
+          Let us know and we'll be happy to talk to you!
         </p>
         <address>
-            55 Main Street <br />
-            Some Town, Ca <br />
-            12345<br />
-            P: 555.RUN.BUDZ (555.786.2839)<br />
-            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          55 Main Street <br />
+          Some Town, Ca <br />
+          12345<br />
+          P: 555.RUN.BUDZ (555.786.2839)<br />
+          E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
         </address>
+      </div>
     </div>
   </section>
 
@@ -187,7 +186,7 @@
   <footer>
     <h2>❤️ Made with love by Run Buddy.</h2>
     <div>
-      <a href="#">Read Our Privacy Policy</a><br />
+      <a href="./privacy-policy.html">Read Our Privacy Policy</a><br />
       &copy; 2019 Run Buddy, Inc.
     </div>
   </footer>
