--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
 
   <!-- hero/jumbotron -->
   <section class="hero">
+    <div class="hero-cta">
+      <h2>Start Building Habits.</h2>
+      <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corporis obcaecati, optio nemo explicabo iusto fugit
+        sed ratione maxime voluptas facere. Harum explicabo necessitatibus quidem eius at molestias voluptates, animi consequatur.
+      </p>
+    </div>
     <div class="hero-form">
       <h3>Get Started Today</h3>
       <p>Fill out this form and one of our trainers will schedule a consult</p>
