--- a/index.html
+++ b/index.html
@@ -61,16 +61,14 @@
               <label for="trainer-yes">Yes</label>
             </span>
             <span class="radio-wrapper">
-              <input type="radio" name="trainer-confirm" id="trainer-no"/>
+              <input type="radio" name="trainer-confirm" id="trainer-no" />
               <label for="trainer-no">No</label>
             </span>
           </p>
           <p>
             <span class="checkbox-wrapper">
               <input type="checkbox" name="checkpoint1" id="checkbox" />
-              <label for="checkbox">
-                I acknowledge that I am at least 18 years of age.
-              </label>
+              <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
             </span>
           </p>
           <button type="submit">
